Updates and changes to home and resume pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,11 @@
     <h1 id="raleway-font">Miguel Saldana</h1>
     <h1 id="raleway-font"><strong>Automation Engineer</strong></h1>
     <p class="text-center">SQA engineer, ruby enthusiast, 3D developer, geek and corgi owner.</p>
-    <button class="btn button_landing btn-lg btn-xlarge" href="#"><strong>RESUME</strong></button><br><br>
+    <%= link_to resume_path, class:"btn button_landing btn-lg btn-xlarge"  do %>
+        <strong>RESUME</strong>
+    <% end %>
+    <br>
+    <br>
       <%= image_tag("engineer2.gif", alt: "engineer typing fast", style: "width:40%; height: auto;") %>
   </div>
 
