--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -65,7 +65,9 @@
       <section class="section summary-section">
         <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
         <div class="summary">
-          <p>Automation Engineer with full system development lifecycle experience, including designing, developing and implementing test plans, test cases and test processes</p>
+          <p>Automation Engineer with full system development lifecycle experience,
+            including designing, implementing and automating test plans, test cases
+            and test processes</p>
         </div><!--//summary-->
       </section><!--//section-->
 
@@ -96,11 +98,11 @@
           <!--//meta-->
           <div class="details">
             <ul>
-              <li>Worked with multiple engineering teams on the creation of maintaining our platform of products and the creation of new services and tools.</li>
+              <li>Worked with multiple engineering teams to create test suites for our portfolio of products and services.</li>
+              <li>Organized testing strategies for product deployments for the platform of products and the creation of new services and tools.</li>
               <li>Created a Ruby-Capybara-Rspec test automation framework for newly created products.</li>
-              <li>Organized testing strategy for product deployments.</li>
-              <li>Plan, write, coordinate and executed test suits for regression testing on deployment of our newest tools, applications and system implementation projects.</li>
-              <li>Onboard and coach Quality Assurance apprentices, help them improve their skills and follow our quality practices.</li>
+              <li>Plan, write, coordinate and executed test suites for regression testing on deployment of our newest tools, applications and system implementation projects.</li>
+              <li>Onboard and coach Quality Assurance apprentices and collaborate to interpret high-level requirements, decomposing them into acceptance criteria and effective test cases.</li>
               <li>Create training content and documentation of usage and testing of products, internal tools and training.</li>
             </ul>
           </div><!--//details-->
