--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -199,61 +199,35 @@
       Projects -->
 
       <section class="skills-section section">
-        <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
-        <div class="skillset">
+        <h2 class="section-title"><i class="fa fa-rocket"></i>Tools &amp; Skills</h2>
 
-          <div class="item">
-            <h3 class="level-title">Ruby</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="90%">
-              </div>
-            </div><!--//level-bar-->
-          </div><!--//item-->
+          <table class="table table-hover table-bordered table-sm">
+            <thead>
+            <tr>
+              <th style="background-color: #f5f5f5">Tools</th>
+              <th style="background-color: #f5f5f5">Skills</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td>Ruby</td>
+              <td>Agile Methodologies</td>
+            </tr>
+            <tr>
+              <td>Ruby on Rails</td>
+              <td>Quality Assurance</td>
+            </tr>
+            <tr>
+              <td>Rspec, Cucumber, Capybara, Selenium</td>
+              <td>Test planning</td>
+            </tr>
+            <tr>
+              <td>Bash scripting</td>
+              <td>Continuous Integration</td>
+            </tr>
+            </tbody>
+          </table>
 
-          <div class="item">
-            <h3 class="level-title">Ruby on Rails</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="80%">
-              </div>
-            </div><!--//level-bar-->
-          </div><!--//item-->
-
-
-          <div class="item">
-            <h3 class="level-title">Minitest</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="98%">
-              </div>
-            </div><!--//level-bar-->
-          </div><!--//item-->
-
-
-          <div class="item">
-            <h3 class="level-title">Rspec</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="85%">
-              </div>
-            </div><!--//level-bar-->
-          </div><!--//item-->
-
-          <div class="item">
-            <h3 class="level-title">Cucumber</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="95%">
-              </div>
-            </div><!--//level-bar-->
-          </div><!--//item-->
-
-
-          <div class="item">
-            <h3 class="level-title">Capybara</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="90%">
-              </div>
-            </div><!--//level-bar-->
-          </div><!--//item-->
-
-        </div>
       </section><!--//skills-section-->
 
     </div><!--//main-body-->
