Friendly sluga addition

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="jumbotron center-element">
     <h1 id="raleway-font">Miguel Saldana</h1>
-    <h1 id="raleway-font"><strong>Automation Engineer</strong></h1>
+    <h1 id="raleway-font"><strong>QA Automation Engineer</strong></h1>
     <p class="text-center">SQA engineer, ruby enthusiast, 3D developer, geek and corgi owner.</p>
     <%= link_to resume_path, class:"btn button_landing btn-lg btn-xlarge"  do %>
         <strong>RESUME</strong>
