--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -5,7 +5,7 @@
       <div class="profile-container">
         <%= image_tag("profile.png", alt: "miguel_profile_pic", class: "profile") %>
         <h1 class="name">Miguel Saldana</h1>
-        <h3 class="tagline">Automation Engineer</h3>
+        <h3 class="tagline">QA Automation Engineer</h3>
       </div><!--//profile-container-->
 
       <div class="contact-container container-block">
@@ -65,7 +65,7 @@
       <section class="section summary-section">
         <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
         <div class="summary">
-          <p>Automation Engineer with full system development lifecycle experience,
+          <p>QA Automation Engineer with full system development lifecycle experience,
             including designing, implementing and automating test plans, test cases
             and test processes</p>
         </div><!--//summary-->
@@ -77,7 +77,7 @@
         <div class="item">
           <div class="meta">
             <div class="upper-row">
-              <h3 class="job-title">Automation Engineer</h3>
+              <h3 class="job-title">QA Automation Engineer</h3>
               <div class="time">2017 - Present</div>
             </div><!--//upper-row-->
             <div class="company"><%= link_to "Jellyvision", "http://www.jellyvision.com/", target: "_blank", rel: "nofollow" %></div>
