--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :slug %>
+    <%= form.text_field :slug, id: :blog_slug, :readonly => true%>
+  </div>
+
+  <div class="field">
     <%= form.label :body %>
     <%= form.text_area :body, id: :blog_body %>
   </div>
