Added resources for projects

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,6 +1,6 @@
-<div class="navbar navbar-default navbar-fixed-bottom">
+<footer class="footer navbar-default ">
   <div class="container">
     <p class="navbar-text pull-left">Created by Miguel Saldana using</p>
     <%= link_to image_tag("rails-logo.png", alt: "rails-logo", class: "rails-logo-small") %>
   </div>
-</div>
+</footer>
